--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -6,20 +6,22 @@
         <h3 class="fw-bold">Create Your Account</h3>
         <span class="mt-2 fs-7">Already Have a Account? <a href="" class="text-decoration-none fw-bold"> Sign In</a></span>
         <!-- Registration from  -->
-        <form>
+        <form [formGroup]="users" (ngSubmit)="registration()">
             <!-- profile image select Section -->
             <div class="row">
                 <div class="col-12 my-3 my-lg-4 ">
                     <label for="select-image" class="position-relative cursor-pointer">
                         <div class="profile-image overflow-hidden">
                             <img src="./../../assets/images/registration-profile-vector.png" alt="vector-image"
-                                width="w-100 h-100">
+                                width="w-100 h-100" *ngIf="!base64String">
+                                <img [src]="base64String" alt="profile-icon" class="w-100 h-100 object-fit-cover" />
                         </div>
                         <img src="./../../assets/images/pluse-image.png" alt="pluse-image"
                             class="pluse-image position-absolute">
-                        <input type="file" id="select-image" class="d-none">
+                        <input type="file" id="select-image" class="d-none" (change)="selectImage($event)">
                     </label>
                 </div>
+                <span class="text-danger fs-8">{{imageValidationMessage}}</span>
             </div>
             <!-- End profile image select Section -->
             <!-- First Row -->
@@ -28,7 +30,7 @@
                 <div class="col-12 col-sm-6">
                     <div class="form-group mt-3">
                         <label for="FirstName" class="fw-bold ">First Name <span class="text-danger"> *</span></label>
-                        <input type="text" class="form-control" id="FirstName" placeholder="First Name">
+                        <input type="text" class="form-control" id="FirstName" placeholder="First Name" formControlName="firstName">
                     </div>
                 </div>
                 <!-- End  FirstName -->
@@ -36,7 +38,7 @@
                 <div class="col-12  col-sm-6">
                     <div class="form-group mt-3">
                         <label for="LastName" class="fw-bold ">Last Name <span class="text-danger"> *</span></label>
-                        <input type="text" class="form-control" id="LastName" placeholder="Last Name">
+                        <input type="text" class="form-control" id="LastName" placeholder="Last Name" formControlName="lastName">
                     </div>
                 </div>
                 <!-- End lastName -->
@@ -48,7 +50,7 @@
                 <div class="col-12 col-sm-6">
                     <div class="form-group mt-3">
                         <label for="EmailID" class="fw-bold ">Email Id<span class="text-danger"> *</span></label>
-                        <input type="text" class="form-control" id="EmailID" placeholder="Email ID">
+                        <input type="text" class="form-control" id="EmailID" placeholder="Email ID" formControlName="email">
                     </div>
                 </div>
                 <!-- End  Email ID -->
@@ -56,7 +58,7 @@
                 <div class="col-12 col-sm-6">
                     <div class="form-group mt-3">
                         <label for="Password" class="fw-bold ">Password <span class="text-danger"> *</span></label>
-                        <input type="text" class="form-control" id="Password" placeholder="Password">
+                        <input type="text" class="form-control" id="Password" placeholder="Password" formArrayName="password">
                     </div>
                 </div>
                 <!-- End Password -->
@@ -70,7 +72,7 @@
                     <div class="form-group mt-3">
                         <label for="PhoneNumber" class="fw-bold ">Phone Number<span class="text-danger">
                                 *</span></label>
-                        <input type="text" class="form-control" id="PhoneNumber" placeholder="Phone Number">
+                        <input type="text" class="form-control" id="PhoneNumber" placeholder="Phone Number" formControlName="phoneNumber">
                     </div>
                 </div>
                 <!-- End Phone Number -->
@@ -79,8 +81,8 @@
                     <div class="form-group mt-3">
                         <label for="Password" class="fw-bold ">Select User Type <span class="text-danger">
                                 *</span></label>
-                        <ng-select placeholder="Select UserType">
-                            <ng-option *ngFor="let user of userTypes" [value]="user.id">{{user.name}}</ng-option>
+                        <ng-select placeholder="Select UserType" formControlName="userRoll" (change)="changeUserType($event)">
+                            <ng-option *ngFor="let user of userTypeList" [value]="user.id">{{user.usertype}}</ng-option>
                         </ng-select>
                     </div>
                 </div>
@@ -94,8 +96,8 @@
                 <div class="col-12 col-sm-12">
                     <div class="form-group mt-3">
                         <label for="Country" class="fw-bold ">Select Country<span class="text-danger"> *</span></label>
-                        <ng-select placeholder="india">
-                            <ng-option *ngFor="let user of userTypes" [value]="user.id">{{user.name}}</ng-option>
+                        <ng-select  formControlName="countryId" placeholder="india" (change)="changeCountry($event)">
+                            <ng-option *ngFor="let user of countryList" [value]="user.countryId">{{user.countryName}}</ng-option>
                         </ng-select>
                     </div>
                 </div>
@@ -105,8 +107,8 @@
                     <div class="form-group mt-3">
                                 <div class="form-group mt-3">
                                     <label for="state" class="fw-bold ">Select State<span class="text-danger"> *</span></label>
-                                    <ng-select placeholder="Select State">
-                                        <ng-option *ngFor="let user of userTypes" [value]="user.id">{{user.name}}</ng-option>
+                                    <ng-select placeholder="Select State" formControlName="stateId" (change)="changeState($event)">
+                                        <ng-option *ngFor="let user of stateList" [value]="user.stateId">{{user.stateName}}</ng-option>
                                     </ng-select>
                                 </div>
                     </div>
@@ -117,8 +119,8 @@
                     <div class="form-group mt-3">
                                 <div class="form-group mt-3">
                                     <label for="City" class="fw-bold ">Select City<span class="text-danger"> *</span></label>
-                                    <ng-select placeholder="Select City" >
-                                        <ng-option *ngFor="let user of userTypes" [value]="user.id">{{user.name}}</ng-option>
+                                    <ng-select placeholder="Select City" formControlName="cityId" >
+                                        <ng-option *ngFor="let user of cityList" [value]="user.cityId">{{user.cityName}}</ng-option>
                                     </ng-select>
                                 </div>
                     </div>
